--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>URA — Chat</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app">
@@ -63,7 +63,7 @@
       </div>
     </main>
   </div>
-  <script src="./main.js"></script>
+  <script src="main.js"></script>
   
 </body>
 </html>
